--- a/journal/202109.md
+++ b/journal/202109.md
@@ -136,13 +136,9 @@ Backend, internal, and command-line changes:
 
 **[vspd](https://github.com/decred/vspd)**
 
-- {}
-
-<a id="dcrstakepool" />
-
-**[dcrstakepool](https://github.com/decred/dcrstakepool)**
-
-- {}
+- added architecture [diagram](https://github.com/decred/vspd/pull/296) to the [Deployment Guide](https://github.com/decred/vspd/blob/master/docs/deployment.md)
+- updated handling of dcrd's [errors](https://github.com/decred/vspd/pull/295)
+- simpler and more reliable value [comparison](https://github.com/decred/vspd/pull/294) in tests
 
 <a id="dcrpool" />
 
