--- a/journal/202109.md
+++ b/journal/202109.md
@@ -144,7 +144,8 @@ Backend, internal, and command-line changes:
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- {}
+- upgraded to use [Go 1.16](https://github.com/decred/dcrpool/pull/335) features
+- fixed handling of blocks that got [reorged](https://github.com/decred/dcrpool/pull/336) off the chain
 
 <a id="dcrlnd" />
 
