--- a/journal/202109.md
+++ b/journal/202109.md
@@ -8,6 +8,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 - development work on 2 consensus changes completed
 - Politeia v1.2 release
+- maybe mention something in DCRDEX like backend multi-asset reg fee support (too complex for an intro?) or translations
 
 }
 
@@ -157,7 +158,36 @@ Backend, internal, and command-line changes:
 
 **[DCRDEX](https://github.com/decred/dcrdex)**
 
-- {}
+User-facing:
+
+- added historical [candlestick chart](https://github.com/decred/dcrdex/pull/1208)
+
+{ UI image candidates: 1208 1207}
+
+Backend and internal changes:
+
+- optimized [restoring](https://github.com/decred/dcrdex/pull/1183) account from seed
+- simplified the procedure of changing [lot sizes](https://github.com/decred/dcrdex/pull/1212) (the minimum trade amount)
+- discover accounts [before](https://github.com/decred/dcrdex/pull/1201) requesting registration fee address (to support multi-asset fees)
+- support paying registration fee in different [assets](https://github.com/decred/dcrdex/pull/1202), implemented BTC fees
+- refactoring to prepare for [Bitcoin SPV](https://github.com/decred/dcrdex/pull/1089) support
+- more fine grained [rate limiting](https://github.com/decred/dcrdex/pull/1192) to defend against network attacks
+- simplified check for wallet [ownership](https://github.com/decred/dcrdex/pull/1193) when changing wallet settings
+- added [`usermatches`](https://github.com/decred/dcrdex/pull/1213) command-line app for retrieving match data and saving it as CSV
+- recognize [`rpcconnect`](https://github.com/decred/dcrdex/pull/1206) Bitcoin config parameter
+
+Work towards internationalization:
+
+- added [translation](https://github.com/decred/dcrdex/pull/1127) support to the web client UI
+- improved system for translating [notifications](https://github.com/decred/dcrdex/pull/1197)
+- added a `dexc` switch to re-translate templates on the fly (allows faster iteration during development)
+- added [Portuguese](https://github.com/decred/dcrdex/pull/1185) and [Chinese](https://github.com/decred/dcrdex/pull/1207) translations
+
+Internal changes towards Ethereum support:
+
+- added a tool to [verify](https://github.com/decred/dcrdex/pull/1203) swap contract deployed on the Ethereum network (can be used to detect unexpected change of the contract)
+- added decoding and validation of [transactions](https://github.com/decred/dcrdex/pull/1215) while they are in a mempool (allows to fail fast before a malformed tx is mined)
+- implemented estimation of [max order](https://github.com/decred/dcrdex/pull/1184) the wallet may place
 
 <a id="dcrandroid" />
 
