--- a/journal/202109.md
+++ b/journal/202109.md
@@ -228,9 +228,34 @@ Merged in September:
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+User-facing changes merged:
 
-{ shot of new UI stuff }
+- split big seed backup flow into [steps](https://github.com/planetdecred/godcr/pull/587)
+- added ["Advanced mode"](https://github.com/planetdecred/godcr/pull/614) link to Send page, which allows to manually select coins to spend in the transaction (also [known](https://en.bitcoin.it/wiki/Privacy#Coin_control) as ["coin control"](https://bitcoin.design/guide/payments/send/coin-selection/#manual-coin-selection-aka-coin-control))
+- added [hover](https://github.com/planetdecred/godcr/pull/586) effects to numerous [widgets](https://github.com/planetdecred/godcr/pull/624)
+- show [rescan](https://github.com/planetdecred/godcr/pull/629) progress in Overview
+- improved UX for [creating](https://github.com/planetdecred/godcr/pull/622) wallets and accounts
+- allow closing [dropdowns](https://github.com/planetdecred/godcr/pull/616) by clicking outside
+- improved rendering of Markdown [tables](https://github.com/planetdecred/godcr/pull/529)
+- refactored [ticket](https://github.com/planetdecred/godcr/pull/567) fetching and display
+- optimized UX of language and currency [modals](https://github.com/planetdecred/godcr/pull/626)
+- added [Spanish](https://github.com/planetdecred/godcr/pull/521) translation
+- fixed [blurry](https://github.com/planetdecred/godcr/pull/618) icons on higher resolutions
+- ~7 other UX tweaks and ~17 other bug fixes
+
+Internal and developer changes:
+
+- fixed building on [FreeBSD](https://github.com/planetdecred/godcr/pull/627)
+- added [makefile](https://github.com/planetdecred/godcr/pull/628) to manage target OS builds
+- [embedded](https://github.com/planetdecred/godcr/pull/620) assets in app binary
+
+{ UI image candidates: 587 622 629 }
+
+In progress:
+
+- [DEX](https://github.com/planetdecred/godcr/pull/637) integration (building on [support](https://github.com/planetdecred/dcrlibwallet/pull/210) in dcrlibwallet)
+
+Check the second [godcr proposal](https://proposals.decred.org/record/f7d9fc8) for a status update and 2021-2022 roadmap.
 
 <a id="dcrdata" />
 
