--- a/journal/202109.md
+++ b/journal/202109.md
@@ -261,7 +261,23 @@ Check the second [godcr proposal](https://proposals.decred.org/record/f7d9fc8) f
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
-- {}
+User-facing changes:
+
+- implemented DCRDEX [candlestick](https://github.com/decred/dcrdata/pull/1854) chart on the [Market](https://explorer.dcrdata.org/market?chart=candlestick&xc=dcrdex&bin=1d) page
+- show transaction and script [versions](https://github.com/decred/dcrdata/pull/1863) on tx page
+- added support for [Pay-to-Pubkey](https://github.com/decred/dcrdata/pull/1871) (P2PK) [address](https://devdocs.decred.org/developer-guides/addresses/) type
+- restored desktop [notifications](https://github.com/decred/dcrdata/pull/1866)
+- added [SEO meta tags](https://github.com/decred/dcrdata/pull/1870) for prettier search results and previews in social media
+- ~2 bug fixes
+
+Internal changes:
+
+- switched to a new [trylock](https://github.com/decred/dcrdata/pull/1868) implementation
+- reduced [reliance](https://github.com/decred/dcrdata/pull/1855) on dcrd's RPC packages
+- upgraded to latest [dcrd](https://github.com/decred/dcrdata/pull/1849)
+- removed abandoned [notify.js](https://github.com/decred/dcrdata/pull/1867) dependency
+
+Tip: bleeding edge development version of dcrdata can be accessed at [tip.dcrdata.org](https://tip.dcrdata.org/).
 
 <a id="tinydecred" />
 
@@ -476,6 +492,8 @@ In September DCR was trading between USD 96.14-185.79 / BTC 0.002308-0.003769. T
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
 { dcrdex updates, esp. volume }
+
+{ DEX candlesticks }
 
 
 ## Relevant External
