--- a/journal/202109.md
+++ b/journal/202109.md
@@ -390,6 +390,17 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 { overview of outreach/communications/marketing/PR activity for past month and any short-term plans }
 
+Monde PR’s achievements for September 
+
+- PR Proposal passed September 14th
+- Updated the PR calendar to include upcoming announcements and PR activity 
+- Pitched Decred to two PR opportunities 
+- Secured two media interviews 
+
+Secured the following news articles:
+
+- @lukebp was interviewed by the [Cigars and Crypto podcast](https://www.cigarsandcrypto.com/episode-175-luke-powell-of-the-decred-project/), covering all things Decred
+
 
 ## Events
 
