Correction - Monde PR update

--- a/journal/202109.md
+++ b/journal/202109.md
@@ -330,7 +330,7 @@ Two new proposals were submitted, both by @raedah, requesting renewed funding fo
 
 Voter participation reached new heights, with both of the votes this month seeing turnout above the previous record level.
 
-- The PR [proposal](https://proposals.decred.org/record/58d9f46) from Monde was approved with 97.5% approval and a turnout of 75%.
+- The PR [proposal](https://proposals.decred.org/record/58d9f46) from was approved with 97.5% approval and a turnout of 75%.
 - The [proposal](https://proposals.decred.org/record/150cf81) to fund an educational video series for the Indian market, from @finstreet21, was rejected with 45% approval and turnout of 77%.
 
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
@@ -392,14 +392,14 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 Monde PR’s achievements for September 
 
-- PR Proposal passed September 14th
+- PR Proposal passed September 14th 
 - Updated the PR calendar to include upcoming announcements and PR activity 
 - Pitched Decred to two PR opportunities 
 - Secured two media interviews 
 
 Secured the following news articles:
 
-- @lukebp was interviewed by the [Cigars and Crypto podcast](https://www.cigarsandcrypto.com/episode-175-luke-powell-of-the-decred-project/), covering all things Decred
+- @lukebp was interviewed by the [Cigars and Crypto Podcast](https://www.cigarsandcrypto.com/episode-175-luke-powell-of-the-decred-project/), covering all things Decred
 
 
 ## Events
