--- a/journal/202109.md
+++ b/journal/202109.md
@@ -488,6 +488,10 @@ In September DCR was trading between USD 96.14-185.79 / BTC 0.002308-0.003769. T
 
 { other: regulations, privacy, security, fun }
 
+Sushi's Miso app was [exploited](https://www.coindesk.com/business/2021/09/17/3m-in-ether-stolen-from-sushiswaps-miso-launchpad/) to steal the proceeds of an NFT drop ($3m for Kia Sedonas from Jay Pegs Auto Mart). The attacker was [identified](https://www.coindesk.com/tech/2021/09/17/3m-was-stolen-but-the-real-steal-is-these-kia-sedonas-say-anonymous-developers/) (through their use of ENS domain) as a Sushi developer, who had inserted code into the front end which would send funds to their own address. The funds were subsequently returned.
+
+The Compound DeFi app deployed new smart contracts which [gave](https://www.coindesk.com/tech/2021/09/30/defi-money-market-compound-overpays-15m-in-comp-rewards-in-possible-exploit/) away $80M worth of COMP tokens in unintended ways. Founder Robert Leshner asked recipients to send the tokens back, and described it as a moral [dilemma](https://www.coindesk.com/tech/2021/10/01/compound-founder-says-80m-bug-presents-moral-dilemma-for-defi-users/), after initially intimating that people who don't give the tokens back could have their details passed to tax collection authorities. One interesting aspect of the story is that the problem was identified quite quickly, but because changing the contracts requires a governance process there was no way to deploy a quick fix and all of the vulnerable funds were drained.
+
 { Coinbase hack https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/ }
 
 { Did this get any legs?
