Dev review lukebp

--- a/journal/202109.md
+++ b/journal/202109.md
@@ -127,7 +127,7 @@ Backend, internal, and command-line changes:
 - ~4 other backend bug fixes
 - increased backend and end-to-end UI test coverage
 
-{ UI image candidates: I liked design images in [2497](https://github.com/decred/politeiagui/issues/2497#issuecomment-887530713), any other? }
+{ UI image candidates: design images in [2497](https://github.com/decred/politeiagui/issues/2497#issuecomment-887530713) }
 
 <a id="vspd" />
 
@@ -516,6 +516,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
-- reviews and feedback: {}
+- reviews and feedback: lukebp
 - title image: {}
 - funding: Decred stakeholders
