--- a/journal/202109.md
+++ b/journal/202109.md
@@ -352,7 +352,7 @@ Voter participation reached new heights, with both of the votes this month seein
 
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
 
-See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the month's proposals.
+See Politeia Digest [issue 46](https://blockcommons.red/politeia-digest/issue046/) and [issue 47](https://blockcommons.red/politeia-digest/issue047/) for more details on the month's proposals.
 
 
 ## Network
@@ -418,6 +418,8 @@ Secured the following news articles:
 
 - @lukebp was interviewed by the [Cigars and Crypto Podcast](https://www.cigarsandcrypto.com/episode-175-luke-powell-of-the-decred-project/), covering all things Decred
 
+{ maybe summarize https://twitter.com/rstaudt2/status/1443257842920734727 or linked reddit post }
+
 
 ## Events
 
@@ -450,7 +452,8 @@ Videos:
 
 Audio:
 
-- {}
+- https://www.cigarsandcrypto.com/episode-175-luke-powell-of-the-decred-project/
+- Decred Society by @phoenixgreen has gone live on [Apple Podcasts](https://podcasts.apple.com/us/podcast/decred-society/id1586826872).
 
 Art and fun:
 
