Gov add and clean

--- a/journal/202109.md
+++ b/journal/202109.md
@@ -327,20 +327,16 @@ Community stats as of Oct 2:
 
 ## Governance
 
-In September the new [treasury](https://dcrdata.decred.org/treasury) received 10,274 DCR worth $1.4M at September's average rate of $139.56. 590 DCR was spent to pay contractors, worth $82K at September's rate, or $95K at August's billing rate of $161.24. As of Oct 2, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and new treasury is 723,528 DCR (83.5 million USD at $115.45).
-
-{ check the legacy treasury for any activity. 18 DCR received, looks like change }
-
-{ high level recap of decision-making activity and most important events }
+In September the new [treasury](https://dcrdata.decred.org/treasury) received 10,274 DCR worth $1.4M at September's average rate of $139.56. 590 DCR was spent to pay contractors, worth $82K at September's rate, or $95K at August's billing rate of $161.24. As of Oct 2, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 723,528 DCR (83.5 million USD at $115.45).
 
 Two new proposals were submitted, both by @raedah, requesting renewed funding for [GoDCR](https://proposals.decred.org/record/f7d9fc8) and [Mobile Wallets](https://proposals.decred.org/record/6db3c4e).
 
 Voter participation reached new heights, with both of the votes this month seeing turnout above the previous record level.
 
-- The PR [proposal](https://proposals.decred.org/record/58d9f46) from was approved with 97.5% approval and a turnout of 75%.
+- The PR [proposal](https://proposals.decred.org/record/58d9f46) from Monde was approved with 97.5% approval and a turnout of 75%.
 - The [proposal](https://proposals.decred.org/record/150cf81) to fund an educational video series for the Indian market, from @finstreet21, was rejected with 45% approval and turnout of 77%.
 
-{ check https://github.com/decredcommunity/proposals/commits/master for updates }
+The long-awaited proposal [author updates](https://github.com/decred/politeia/issues/1473) feature is now live on Politeia and has already been used by two [development](https://proposals.decred.org/record/3a98861) [proposals](https://proposals.decred.org/record/e2d7b7d) to report progress.
 
 See Politeia Digest [issue 46](https://blockcommons.red/politeia-digest/issue046/) and [issue 47](https://blockcommons.red/politeia-digest/issue047/) for more details on the month's proposals.
 
