--- a/journal/202109.md
+++ b/journal/202109.md
@@ -347,7 +347,7 @@ See Politeia Digest [issue 46](https://blockcommons.red/politeia-digest/issue046
 
 **Hashrate**: September's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kszlo86g-ku72gu79&scale=linear&bin=block&axis=time) opened at ~355 Ph/s and closed ~228 Ph/s, bottoming at 190 Ph/s and peaking at 449 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Oct 1: Poolin 36%, F2Pool 25%, AntPool 22%, BTC.com 5%, Luxor 3%, HuobiPool 1%, CoinMine 0.15%, OKEx 0.13%.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Oct 1: Poolin 36%, F2Pool 25%, AntPool 22%, BTC.com 5%, ViaBTC 5%, Luxor 3%, HuobiPool 1%, CoinMine 0.15%, OKEx 0.13%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
@@ -359,7 +359,7 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 Ticket prices seem to have hit a relative plateau between two extremes. 
 
-**VSP**: On Oct 1, 7,623 (-v) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 216 (-34) by listed legacy dcrstakepool servers. Collectively the 8 legacy and 15 new VSPs managed 19.2% of the ticket pool.
+**VSP**: On Oct 1, ~7,600 (-500) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and ~220 (-30) by listed legacy dcrstakepool servers. Collectively the 8 legacy and 15 new VSPs managed 19% (-2%) of the ticket pool. Unlisted but still active legacy VSPs managed 29 (-11) live tickets.
 
 **Nodes**: Throughout September there were around 204 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
