--- a/journal/202109.md
+++ b/journal/202109.md
@@ -365,11 +365,9 @@ Ticket prices seem to have hit a relative plateau between two extremes.
 
 Node versions as of Oct 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (257 dcrd nodes): v1.6.2 - 55%, v1.6.0 - 13%, v1.6.1 - 12%, v1.7 dev builds - 14%, v1.6 dev builds - 2.7%, v1.5.2 - 2%, v1.5.1 - 1.2%.
 
-{ maybe } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jza9l4a5-kuoqy2o0&bin=day&axis=time&visibility=true-true-true) varied between 50.3-52.2% and set a new all-time high while the amount of mixed coins broke the 7 million mark.
 
-{ maybe } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
-
-{ any interesting analysis or events in the network }
+Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=jza9l4a5-kuoqy2o0&bin=day&axis=time) varied between 240-550K DCR.
 
 
 ## Ecosystem
