--- a/journal/202109.md
+++ b/journal/202109.md
@@ -366,19 +366,15 @@ Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participati
 
 ## Ecosystem
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best }
+Matrix users are advised to upgrade their clients (most notably Element) to patch security [vulnerability](https://matrix.org/blog/2021/09/13/vulnerability-disclosure-key-sharing/) disclosed on Sep 13. If user's account is compromised (by either a direct compromise of account credentials, or by a compromised homeserver), in certain circumstances it may be possible to read encrypted messages sent to it by vulnerable contacts. The disclosure noted, "The greatest risk is to users who are in encrypted rooms containing malicious servers. Admins of malicious servers could attempt to impersonate their users' devices in order to spy on messages sent by vulnerable clients in that room.". As an extra safety measure, you can review active sessions and remove any obsolete or suspicious ones.
 
 Legacy [decredvoting.com](https://decredvoting.com/) has been removed from the [VSP list](https://decred.org/vsp/) to facilitate user migration to the new [vspd system](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/). Voting wallets are still online to vote the remaining tickets (9 of Oct 1). Decred Voting has served [since 2018](https://www.reddit.com/r/decred/comments/9c6s3l/new_voting_service_provider_aka_stake_pool_is_now/) and is known for developing advanced features like email [notifications](https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/) on voted tickets and custom ticket analytics [dashboard](https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/), and for supporting small holders with [education](https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3) on ticket splitting and [features](https://www.reddit.com/r/decred/comments/euqd4h/introducing_split_ticket_dashboard_on/) to make it easier to use.
 
 For anyone still using legacy VSP, it is recommended to switch to [vspd providers](https://decred.org/vsp/) to avoid the risk of missed tickets, e.g. in case the legacy VSP shuts down or stops working with the upcoming consensus upgrades. As of Oct 1, all legacy VSPs managed less than 250 tickets, or 0.6% of the ticket pool.
 
-{ check #services for news }
-
-{ check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
-
-{ Upgrade your Matrix clients, review devices and remove the ones you no longer use or recognize, https://matrix.org/blog/2021/09/13/vulnerability-disclosure-key-sharing/ }
-
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
+
+Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat to follow Decred ecosystem updates.
 
 
 ## Outreach
