--- a/journal/202109.md
+++ b/journal/202109.md
@@ -399,36 +399,33 @@ Secured the following news articles:
 
 ## Media
 
-{ notable community efforts }
-
-{ ratings news }
-
-{ hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
-
 Selected articles:
 
-- https://coinmarketcap.com/alexandria/article/a-deep-dive-into-how-the-top-daos-work
+- Decred Blockchain Analysis - Part 3 by @richardred ([blockcommons.red](https://blockcommons.red/post/dcr-on-chain-3/)) - explores what insights can be found by applying address clustering to tickets. Note: there remain a couple of issues with the results to be fixed. { summary ok? feel free to add more key points to trigger curiosity and clicks; notice ok? please adjust if needed }
+- Decred address clustering deep dive by @richardred ([blockcommons.red](https://blockcommons.red/publication/clustering-deep-dive/)) - sub-report specialized on the challenges of clustering { fine to mention in this list? }
+- A deep dive into how the top 10 DAOs work by Andrey Sergeenkov ([coinmarketcap.com](https://coinmarketcap.com/alexandria/article/a-deep-dive-into-how-the-top-daos-work))
+
+{ bison pool pic is a must }
 
 Videos:
 
-- {}
+- Being fork resistant - Decred Fundamentals by @phoenixgreen ([youtube](https://www.youtube.com/watch?v=P2LrIcF_8qw))
+- How is Decred fork resistant? - Decred Fundamentals @phoenixgreen ([youtube](https://www.youtube.com/watch?v=pmQiU3zycU0))
+- Decred in Depth Ep. 43 - Chris Dannen + design thinking + Decred's future by @elima\_iii ([youtube](https://www.youtube.com/watch?v=Cj6PmMza9RQ))
+- Decred Price Analysis - 15th September 2021 by Brave New Coin ([youtube](https://www.youtube.com/watch?v=qOpLpdBCMI4))
 
 Audio:
 
-- https://www.cigarsandcrypto.com/episode-175-luke-powell-of-the-decred-project/
+- Cigars and Crypto 175 - Luke Powell of the Decred Project ([cigarsandcrypto.com](https://www.cigarsandcrypto.com/episode-175-luke-powell-of-the-decred-project/))
 - Decred Society by @phoenixgreen has gone live on [Apple Podcasts](https://podcasts.apple.com/us/podcast/decred-society/id1586826872).
-
-Art and fun:
-
-- {}
 
 Translations:
 
-- {}
+- [Decred News August](https://www.youtube.com/watch?v=6ifueUAWy_c) - in Chinese (@Dominic), published on Chinese platforms like [Bilibili](https://www.bilibili.com/video/BV1QA411c77W), [Weibo](https://weibo.com/6824123103/KvXMCaDEW), and [WeChat](https://mp.weixin.qq.com/s/l1RO1Mkb9LNQK2Z2x1mkyw)
+- { maybe list two Sep es translations, if published anywhere }
+- Decred Journal August 2021 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic), and Spanish (@francov\_). Thank you to all translators for staying around!
 
-Other non-English content:
-
-- {}
+Share your translations in our [#translations](https://chat.decred.org/#/room/#translations:decred.org) chat room.
 
 
 ## Discussions
