RE clean and mention Coinbase reimbursement

--- a/journal/202109.md
+++ b/journal/202109.md
@@ -437,21 +437,11 @@ In September DCR was trading between USD 96.14-185.79 / BTC 0.0023-0.0038. The a
 
 ## Relevant External
 
-{ cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
-
-{ governance, funding, chain forks, community splits }
-
-{ DEX }
-
-{ relevant exchanges and websites }
-
-{ other: regulations, privacy, security, fun }
-
-Sushi's Miso app was [exploited](https://www.coindesk.com/business/2021/09/17/3m-in-ether-stolen-from-sushiswaps-miso-launchpad/) to steal the proceeds of an NFT drop ($3m for Kia Sedonas from Jay Pegs Auto Mart). The attacker was [identified](https://www.coindesk.com/tech/2021/09/17/3m-was-stolen-but-the-real-steal-is-these-kia-sedonas-say-anonymous-developers/) (through their use of ENS domain) as a Sushi developer, who had inserted code into the front end which would send funds to their own address. The funds were subsequently returned.
+Sushi's Miso app was [exploited](https://www.coindesk.com/business/2021/09/17/3m-in-ether-stolen-from-sushiswaps-miso-launchpad/) to steal the proceeds of an NFT drop ($3M for Kia Sedonas from Jay Pegs Auto Mart). The attacker was [identified](https://www.coindesk.com/tech/2021/09/17/3m-was-stolen-but-the-real-steal-is-these-kia-sedonas-say-anonymous-developers/) (through their use of ENS domain) as a Sushi developer, who had inserted code into the front end which would send funds to their own address. The funds were subsequently returned.
 
 The Compound DeFi app deployed new smart contracts which [gave](https://www.coindesk.com/tech/2021/09/30/defi-money-market-compound-overpays-15m-in-comp-rewards-in-possible-exploit/) away $80M worth of COMP tokens in unintended ways. Founder Robert Leshner asked recipients to send the tokens back, and described it as a moral [dilemma](https://www.coindesk.com/tech/2021/10/01/compound-founder-says-80m-bug-presents-moral-dilemma-for-defi-users/), after initially intimating that people who don't give the tokens back could have their details passed to tax collection authorities. One interesting aspect of the story is that the problem was identified quite quickly, but because changing the contracts requires a governance process there was no way to deploy a quick fix and all of the vulnerable funds were drained.
 
-Coinbase was [hacked](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) and it seems that around 6,000 users whose login details had been compromised elsewhere then suffered losses from their Coinbase accounts after the attackers exploited a flaw in Coinbase's SMS two factor recovery process to bypass this safeguard and withdraw their victims' funds. This follows on from more general [discontent](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) with Coinbase customer service in the summer. { mention refunds if there have been any }
+Coinbase was [hacked](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) and it seems that around 6,000 users whose login details had been compromised elsewhere then suffered losses from their Coinbase accounts after the attackers exploited a flaw in Coinbase's SMS two-factor recovery process to bypass this safeguard and withdraw their victims' funds. In a notification [letter](https://oag.ca.gov/system/files/09-24-2021%20Customer%20Notification.pdf) to customers Coinbase said the flaw has been fixed and that all affected customers will be reimbursed. This follows on from more general [discontent](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) with Coinbase customer service in the summer.
 
 { Did this get any legs?
 
